classDiagram
  subgraph Core
    class Component {
      -component_classes
      +register()
      +get_class()
      +from_hash()
      +initialize()
      +type()
      +to_hash()
    }
  end
  subgraph Components
    class Component {
      -component_classes
      +register()
      +get_class()
      +from_hash()
      +initialize()
      +type()
      +to_hash()
    }
    style Component fill:#ffcccc
    class ConsumableComponent {
      -charges
      -effects
      -auto_identify
      +initialize()
      +type()
      +to_hash()
    }
    Component <|-- ConsumableComponent
    style ConsumableComponent fill:#ffcccc
    class CurrencyComponent {
      -value
      -currency_type
      +initialize()
      +type()
      +combine()
      +split()
      +display_string()
      +standard_value()
      +to_hash()
    }
    style CurrencyComponent fill:#ffcccc
    class DurabilityComponent {
      -max_durability
      -current_durability
      +initialize()
      +type()
      +decrease()
      +repair()
      +full_repair()
      +usable?()
      +percentage()
      +status()
      +needs_repair?()
      +to_hash()
      +notify_low_durability()
      +notify_repair()
    }
    style DurabilityComponent fill:#ffcccc
    class EffectComponent {
      -active_effects
      +initialize()
      +type()
      +add_effect()
      +remove_effect()
      +remove_effects_by_source()
      +remove_expired_effects()
      +get_effects_by_type()
      +has_active_effects?()
      +get_stat_modifier()
      +update()
      +to_hash()
    }
    style EffectComponent fill:#ffcccc
    class EquippableComponent {
      -slot
      -stat_modifiers
      -equipped
      +initialize()
      +type()
      +to_hash()
      +validate_slot()
    }
    Component <|-- EquippableComponent
    style EquippableComponent fill:#ffcccc
    class HealthComponent {
      -max_health
      -current_health
      +initialize()
      +type()
      +current_health=()
      +to_hash()
    }
    Component <|-- HealthComponent
    style HealthComponent fill:#ffcccc
    class InputComponent {
      -move_direction
      +initialize()
      +type()
      +to_hash()
    }
    Component <|-- InputComponent
    style InputComponent fill:#ffcccc
    class InventoryComponent {
      -items
      -max_size
      +initialize()
      +type()
      +full?()
      +add()
      +remove()
      +has?()
      +count()
      +find_by_id()
      +to_hash()
      +find_stackable_item()
    }
    style InventoryComponent fill:#ffcccc
    class ItemComponent {
      -name
      -description
      -item_type
      -weight
      -value
      -stackable
      -stack_size
      +initialize()
      +type()
      +to_hash()
    }
    Component <|-- ItemComponent
    style ItemComponent fill:#ffcccc
    class KeyComponent {
      -key_id
      -lock_type
      -one_time_use
      +initialize()
      +type()
      +matches?()
      +unlock()
      +description()
      +to_hash()
    }
    style KeyComponent fill:#ffcccc
    class MovementComponent {
      -active
      -speed
      +initialize()
      +type()
      +active?()
      +to_hash()
    }
    Component <|-- MovementComponent
    style MovementComponent fill:#ffcccc
    class PositionComponent {
      -row
      -column
      +initialize()
      +type()
      +set_position()
      +to_hash()
    }
    Component <|-- PositionComponent
    style PositionComponent fill:#ffcccc
    class RenderComponent {
      -character
      -color
      -layer
      -entity_type
      +initialize()
      +type()
      +to_hash()
    }
    Component <|-- RenderComponent
    style RenderComponent fill:#ffcccc
    class StairsComponent {
      -type
      +initialize()
      +type()
      +to_hash()
    }
    Component <|-- StairsComponent
    style StairsComponent fill:#ffcccc
    class TestPositionComponent {
      -row
      -column
      +initialize()
      +type()
    }
    Component <|-- TestPositionComponent
    style TestPositionComponent fill:#ffcccc
  end
  %% Relationships
  ConsumableComponent --> Component : uses
  CurrencyComponent --> Component : uses
  DurabilityComponent --> Component : uses
  EffectComponent --> Component : uses
  EquippableComponent --> Component : uses
  HealthComponent --> Component : uses
  InputComponent --> Component : uses
  InventoryComponent --> Component : uses
  ItemComponent --> Component : uses
  KeyComponent --> Component : uses
  MovementComponent --> Component : uses
  PositionComponent --> Component : uses
  RenderComponent --> Component : uses
  StairsComponent --> Component : uses
  TestPositionComponent --> Component : uses
